sfdxjenkins/force-app/main/default/objects/demo__c/demo__c.object-meta.xml
<CustomObject>
    <label>demo</label>
    <nameField>
        <label>demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>demos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>