sfdxjenkins/force-app/main/default/objects/demo__c/fields/phone_number__c.field-meta.xml
<CustomField>
    <fullName>phone_number__c</fullName>
    <description>Please enter your 10 digit mobile phone number</description>
    <label>phone number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>