sfdxjenkins/force-app/main/default/objects/demo__c/fields/regnumber__c.field-meta.xml
<CustomField>
    <fullName>regnumber__c</fullName>
    <description>Type reg number</description>
    <label>regnumber</label>
    <type>AutoNumber</type>
</CustomField>