sfdxjenkins/force-app/main/default/objects/demo__c/fields/rollnumber__c.field-meta.xml
<CustomField>
    <fullName>rollnumber__c</fullName>
    <description>Describes one&apos;s unique roll number</description>
    <externalId>true</externalId>
    <inlineHelpText>Please Enter your Roll Number</inlineHelpText>
    <label>roll</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>